tests/snapshots/api/node1_v1_explorer_transactions_latest.snap
---
source: tests/common/api_snapshot.rs
---
transaction_summaries:
  - hash: "<string>"
    height: "<number>"
    num_transactions: "<number>"
    offset: "<number>"
    rollups:
      - "<number>"
    time: "<string>"
