tests/snapshots/api/node2_v1_openapi.snap
---
source: tests/common/api_snapshot.rs
---
components: {}
info:
  title: Espresso Node API v1
  version: 1.0.0
openapi: 3.1.0
paths:
  /v1/config/env:
    get:
      description: Get all ESPRESSO_ environment variables set for the current node.
      responses:
        "200":
          description: ""
      summary: Get environment variables
      tags:
        - config
  /v1/config/hotshot:
    get:
      description: Get the HotShot configuration for the current node.
      responses:
        "200":
          description: ""
      summary: Get HotShot config
      tags:
        - config
  /v1/config/runtime:
    get:
      description: Get the merged runtime configuration (CLI flags + env vars + defaults); secrets and L1 RPC URLs are redacted.
      responses:
        "200":
          description: ""
      summary: Get runtime config
      tags:
        - config
  "/v1/state-signature/block/{height}":
    get:
      description: "Get this node's signature for the light client state at the given block height."
      parameters:
        - in: path
          name: height
          required: true
          schema:
            minimum: 0
            type: integer
          style: simple
      responses:
        "200":
          description: ""
      summary: Get light client state signature
      tags:
        - state-signature
tags:
  - name: config
  - name: state-signature
