tests/snapshots/api/orchestrator_version.snap
---
source: tests/common/api_snapshot.rs
---
app_version: ~
disco_version: "<string>"
modules:
  api:
    - api_version: ~
      spec_version: "<string>"
