tests/snapshots/api/state-relay_api_state.snap
---
source: tests/common/api_snapshot.rs
---
accumulated_weight: "<string>"
next_stake: "<string>"
signatures:
  - "<string>"
state: "<string>"
