tests/snapshots/api/state-relay_v3_api_lateststate.snap
---
source: tests/common/api_snapshot.rs
---
accumulated_weight: "<string>"
auth_root: "<string>"
next_stake: "<string>"
signatures:
  - "<string>"
state: "<string>"
