tests/snapshots/api/state-relay_version.snap
---
source: tests/common/api_snapshot.rs
---
app_version: ~
disco_version: "<string>"
modules:
  api:
    - api_version: "<string>"
      spec_version: "<string>"
